--- a/style.css
+++ b/style.css
@@ -8,12 +8,6 @@ body {
   background-color: black;
 }
 
-/* Colonnes latérales fixes */
-.side-column-flex {
-  width: 120px;
-  background-color: #3a3d46;
-}
-
 /* --- Ligne 1 : Flexbox --- */
 .flex-row {
   display: flex;
@@ -55,9 +49,7 @@ nav ul {
 /* --- Ligne 2 : Grid --- */
 .grid-row {
   display: grid;
-  grid-template-columns: 120px 1fr 120px; /* Colonnes : fixe - fluide - fixe */
   grid-template-rows: 630px;
-  background-color: #232323;
 }
 
 .grid-content {
@@ -131,25 +123,24 @@ nav ul {
 }
 
 .right-grid {
-  grid-column: 2 / 3;
-  justify-self: end;
+  display: grid;
+  justify-self: end; /* Aligne l'image à droite dans la grille */
+}
+
+.right-grid img {
+  max-width: 100%;
 }
 
 /* Ligne 3 : Latest News */
 .latest-news-row {
   display: grid;
-  grid-template-columns: 120px 1fr 120px; /* Colonnes : fixe - fluide - fixe */
   grid-template-rows: 169px;
   background-color: white;
 }
 
-.side-column-news-left,
-.side-column-news-right {
-  background-color: white; /* Couleur des colonnes latérales */
-}
-
 .news-content {
   display: flex;
+  flex-direction: column; /* Aligne le contenu en colonne */
   align-items: flex-start; /* Aligne le contenu verticalement */
   justify-content: flex-start; /* Aligne le texte à gauche */
 }
@@ -161,53 +152,96 @@ nav ul {
   font-size: 28px;
   font-weight: 400;
   color: black;
-  text-decoration: underline;
   margin-top: 82px; /* Décale le texte vers le bas */
+  margin-bottom: 5px; /* Décale le texte vers le haut */
+}
+
+.hr-news {
+  width: 13%; /* Ajustez la largeur de la ligne */
+  height: 1px; /* Épaisseur de la ligne */
+  background-color: black; /* Couleur de la ligne */
+  margin-left: 50px; /* Décalage vers le bas (5px) et la droite (20px) */
+  border: none; /* Supprime la bordure par défaut */
 }
 
 /* Ligne 4 : Les photos */
 
-.container-photos {
+.photos {
   display: grid;
-  grid-template-columns: 120px 1fr 120px; /* Colonnes : fixe - fluide - fixe */
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 20px;
+  padding-bottom: 95px;
   background-color: white;
 }
 
-.photos {
-  display: grid;
-
-  overflow: hidden;
-  grid-template-columns: 386px 386px 386px;
-  gap: 20px;
-  padding-bottom: 95px;
+.photo {
+  width: 100%;
+  height: auto;
 }
 
 .photo1 {
   grid-column: 1 / 2;
   grid-row: 1 / 3;
-  margin-left: -20px;
 }
 
 .photo2 {
   grid-column: 2 / 3;
   grid-row: 1 / 2;
-  margin-left: -20px;
 }
 
 .photo3 {
   grid-column: 3 / 4;
   grid-row: 1 / 2;
-  margin-left: -20px;
 }
 
 .photo4 {
   grid-column: 2 / 3;
   grid-row: 2 / 3;
-  margin-left: -20px;
 }
 
 .photo5 {
   grid-column: 3 / 4;
   grid-row: 2 / 3;
-  margin-left: -20px;
+}
+
+.container {
+  width: 100%;
+  height: 100%;
+  display: grid;
+
+  grid-template-columns: auto 1440px auto;
+  grid-template-rows: auto auto auto auto;
+}
+
+.row1 {
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
+}
+
+.row2 {
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
+}
+
+.row3 {
+  grid-column: 2 / 3;
+  grid-row: 3 / 4;
+}
+
+.row4 {
+  grid-column: 2 / 3;
+  grid-row: 4 / 5;
+}
+
+.colorRow1 {
+  background-color: #3a3d46;
+}
+
+.colorRow2 {
+  background-color: black;
+}
+
+.colorRow3,
+.colorRow4 {
+  background-color: white;
 }
